networking/gateway-api-cilium/http-route-sites-b.yaml
# route-shared.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: web-b-route
  namespace: site-b
spec:
  parentRefs:
  - name: infra-gateway
    namespace: infra-gateway  # Crucial: This points back to your gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /webb
    backendRefs:
    - name: web-b
      port: 5678
